--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CollegePaglu - Your Campus Life, Simplified</title>
+  <title>CollegePaglu – The One Super App for Every College Student</title>
   <meta name="description"
-    content="Buy, sell, and skip queues with your college community. Save time & money with CampusMart and LazyPeeps." />
+    content="CollegePaglu is India’s first campus-exclusive super app for college students. Buy & sell college items, pre-order food, skip queues, freelance, and join your campus community." />
 
   <!-- Google Fonts - Preconnect for performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
