--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" href="/collegepaglu%20logo.jpeg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CollegePaglu – The One Super App for Every College Student</title>
   <meta name="description"
-    content="CollegePaglu is India’s first campus-exclusive super app for college students. Buy & sell college items, pre-order food, skip queues, freelance, and join your campus community." />
+    content="CollegePaglu is India's first campus-exclusive super app for college students. Buy & sell college items, pre-order food, skip queues, freelance, and join your campus community." />
+
+  <!-- Open Graph Meta Tags for Google Search & Social Media -->
+  <meta property="og:title" content="CollegePaglu – India's First Campus-Exclusive Super App" />
+  <meta property="og:description" content="Shop. Earn. Connect & Thrive on your college campus with all-in-one super app." />
+  <meta property="og:image" content="https://www.collegepaglu.com/collegepaglu%20logo.jpeg" />
+  <meta property="og:url" content="https://www.collegepaglu.com" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:image" content="https://www.collegepaglu.com/collegepaglu%20logo.jpeg" />
 
   <!-- Google Fonts - Preconnect for performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
